--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.5.3",
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.2",
     "@storyblok/astro": "^5.0.2",
     "astro": "^4.16.7",
+    "preact": "^10.24.3",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   },
